# cocos2dx-samples

./: CMakeLists.txt  do-cmake.sh
Classes/: AppDelegate.cpp  AppDelegate.h  CustomMap.cpp  CustomMap.h  EnemyPuppet.cpp  EnemyPuppet.h  EnemyPuppeteer.cpp  EnemyPuppeteer.h  GameLevelScene.cpp  GameLevelScene.h  HeroPuppet.cpp  HeroPuppet.h  HeroPuppeteer.cpp  HeroPuppeteer.h  IGameWorld.h  IMapPhysics.h  IPuppeteer.h  InputController.cpp  InputController.h  IntroScene.cpp  IntroScene.h  Puppet.cpp  Puppet.h  Resources.h
Resources/tmx/: layer_1.tmx
cmake/: PCHSupport.cmake  SetupCocos2d.cmake
includes/: cocos_custom.h
proj.linux/: main.cpp
